package model;

public enum TipoResiduo {
    PERIGOSO,
    RECICLAVEL,
    ORGANICO,
    NAO_RECICLAVEL
}
